--- a/index.html
+++ b/index.html
@@ -446,13 +446,15 @@
           </div>
         </div>
       </div>
-      <a href="index.html#carousel_64ac" data-page-id="2206810918"
-      class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
+      <div style="display: flex; justify-content: center; width: 100%;" >
+        <a href="index.html#carousel_64ac" data-page-id="2206810918"
+        class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
+      </div>
     </div>
   </section>
   <section class="u-align-center u-clearfix u-gradient u-section-4" id="carousel_42c4">
     <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-      <h2 style="margin-left: 0px;" class="u-align-center u-text u-text-default u-text-1">Key features</h2>
+      <h2 style="margin-left: 0px; width: 100%;" class="u-align-center u-text u-text-default u-text-1">Key features</h2>
       <div class="u-clearfix u-expanded-width u-gutter-18 u-layout-wrap u-layout-wrap-1">
         <div class="u-gutter-0 u-layout">
           <div class="u-layout-row">
@@ -638,8 +640,11 @@
             </div>
           </div>
         </div>
-      </div><a href="index.html#carousel_64ac" data-page-id="2206810918"
-      class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
+      </div>
+      <div style="display: flex; justify-content: right; width: 100%;" >
+        <a href="index.html#carousel_64ac" data-page-id="2206810918"
+        style="font-size: larger; color: whitesmoke; text-decoration: none; margin-bottom: 30px;">Read more...</a>
+      </div>
       </div>
   </section>
   <section class="u-clearfix u-grey-10 u-section-5" id="sec-0f57">
