--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
         </a> 
         </div>
         <div class="u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-          <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form"
+          <form action="http://localhost:8000/contact/create/" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form"
             style="padding: 0px;" source="custom" name="form-2">
             <div class="u-form-group u-form-name">
               <label for="name-da97" class="u-form-control-hidden u-label">Name</label>
@@ -891,7 +891,7 @@
               <input type="submit" value="submit" class="u-form-control-hidden">
             </div>
             <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
-            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try
+            <div class="u-form-send-message u-form-send-errors"> Unable to send your message. Please fix errors then try
               again. </div>
             <input type="hidden" value="" name="recaptchaResponse">
           </form>
@@ -1062,6 +1062,8 @@
 <script src="./Scripts/geometryangle.js"></script>
 
 <script src="./Scripts/Global.js"></script>
+<script src="./Scripts/config.js"></script>
+<script src="./Scripts/contact.js"></script>
 </body>
 
 </html>
