--- a/index.html
+++ b/index.html
@@ -287,8 +287,48 @@
   </section>
   <section class="u-align-center u-clearfix u-grey-10 u-section-2" id="carousel_64ac">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <h2 class="u-text u-text-default u-text-1">What We Do</h2>
-      <p class="u-text u-text-2"> In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
+      <h2 class="u-text u-text-default u-text-1 mb-4">What We Do</h2>
+
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./images/random_bg_3.jpg" class="carousel_img d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>We analyze your data</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/random_bg_2.jpg" class="carousel_img d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>We construct and build something out of your data</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/random_bg_4.jpg" class="carousel_img d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>We play with strategies</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+      <p class="u-text u-text-2 mb-5"> In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
         urna nunc id cursus. Risus at ultrices mi tempus imperdiet. Sapien pellentesque habitant morbi tristique
         senectus et netus. Id cursus metus aliquam eleifend mi in. Quis commodo odio aenean sed. Sollicitudin ac orci
         phasellus egestas tellus. Id velit ut tortor pretium.<br>
@@ -296,46 +336,6 @@
 
       <!-- <img class="u-image u-image-contain u-image-default u-image-1" src="images/photo-1599658880436-c61792e70672.jfif"
         alt="" data-image-width="1170" data-image-height="780"> -->
-
-        
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./images/1.jpeg" class="carousel_img d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./images/dark-mobile-device-mockup_149660-787.jpg" class="carousel_img d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./images/temp_gif.gif" class="carousel_img d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
 
     </div>
   </section>
@@ -345,7 +345,7 @@
       <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing
         the text.</p>
 
-        <iframe src="./images/temp_gif.gif" frameborder="0"
+        <iframe src="./images/giphy.gif" frameborder="0"
         class=" responsive u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1"
         src="./images/dsf.jpg" data-image-width="1200" data-image-height="800">
         ></iframe>
@@ -366,7 +366,7 @@
                   </path>
                 </svg>
               </span>
-              <h4 class="u-text u-text-4">Data Sciences</h4>
+              <h4 class="u-text u-text-4 mb-4">Data Science</h4>
             </div>
 
           </div>
