--- a/Services.html
+++ b/Services.html
@@ -329,7 +329,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="zoom-in">
-            <img src="./images/pic2.jpg" class="img-fluid" alt="">
+            <img src="./images/service_1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
@@ -361,11 +361,11 @@
 
         <div class="row d-flex flex-row-reverse">
           <div class="col-lg-6" data-aos="zoom-in">
-            <img src="./images/pic1.jpg" class="img-fluid" alt="">
+            <img src="./images/service_2.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
-              <h3>Business ntelligence</h3>
+              <h3>Business Intelligence</h3>
               <p class="fst-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua.
