--- a/Services.html
+++ b/Services.html
@@ -298,7 +298,7 @@
       <div class="container">
         <div class="row d-flex flex-row-reverse">
           <div class="col-lg-6 img_padding_mv" data-aos="zoom-in">
-            <img src="./images/Data analysis.png" class="img-fluid" alt="">
+            <img src="./images/service_4.webp" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
