--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="page_type" content="np-template-header-footer-from-plugin">
   <title>Kadamb Data Analysis</title>
   <link rel="stylesheet" href="./CSS-libraries/nicepage.css" media="screen">
-  <link rel="stylesheet" href="./Styles/Home.css" media="screen">
+  <link rel="stylesheet" href="./Styles/Index.css" media="screen">
   <link rel="stylesheet" href="./Styles/Global.css">
   <!-- CSS only -->
   <link href="./CSS-libraries/bootstrap.5.1.3.min.css" rel="stylesheet">
@@ -289,44 +289,9 @@
     <div class="u-clearfix u-sheet u-sheet-1">
       <h2 class="u-text u-text-default u-text-1 mb-4">What We Do</h2>
 
-      <!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./images/random_bg_3.jpg" class="carousel_img d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>We analyze your data</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./images/random_bg_2.jpg" class="carousel_img d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>We construct and build something out of your data</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./images/random_bg_4.jpg" class="carousel_img d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>We play with strategies</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div> -->
+      <video autoplay muted loop id="myVideo">
+        <source src="./videos/videoplayback.mp4" type="video/mp4">
+      </video>
 
       <p class="u-text u-text-2 mb-5"> In mollis nunc sed id semper risus in hendrerit gravida. Aliquet enim tortor at auctor
         urna nunc id cursus. Risus at ultrices mi tempus imperdiet. Sapien pellentesque habitant morbi tristique
