--- a/index.html
+++ b/index.html
@@ -301,15 +301,16 @@
 
     </div>
   </section>
-  <section class="background_gif u-align-center u-clearfix u-white u-section-3" id="carousel_b13d"> 
+  <section class="background_gif u-align-center u-clearfix u-white u-section-3"> 
     <div class="u-clearfix u-sheet u-sheet-1">
-      <h2 class="u-align-center u-text u-text-default u-text-1">Services</h2>
+      <h2 class="u-align-center u-text u-text-default u-text-1 mb-4">Services</h2>
     
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -336,7 +337,7 @@
           <div class="carousel-item">
             <img src="./images/random_bg_3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Data Business</h5>
+              <h5>Business Intelligence</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
@@ -352,8 +353,7 @@
 
       
     </div>
-    <p class="u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing
-      the text.</p>
+    <p class="u-text u-text-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nobis autem, sunt beatae porro dignissimos voluptatibus debitis aperiam pariatur tempora?</p>
       <div style="display: flex; justify-content: center; width: 100%;" >
         <a href="index.html#carousel_64ac" data-page-id="2206810918"
         class="u-btn u-border-none u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-palette-1-base u-radius-50 u-btn-1">Read more</a>
