--- a/About.html
+++ b/About.html
@@ -388,8 +388,70 @@
     </div>
   </section> -->
   
-  <section class=" upper_margin u-clearfix u-grey-5 u-section-3" id="sec-ec75">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+
+
+    <section  id="about" class="about padding_in_btw margin_bottom">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="zoom-in">
+            <img src="./images/whyus_aboutpage_1.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
+            <div class="content pt-4 pt-lg-0">
+              <h3>Why us</h3>
+              <p class="fst-italic">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+              </ul>
+              <p>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="about alt_bgcolor">
+      <div class="container">
+        <div class="row d-flex flex-row-reverse">
+          <div class="col-lg-6 img_padding_mv" data-aos="zoom-in">
+            <img src="./images/ourvision_aboutpage_1.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-6 d-flex flex-column justify-contents-center padding_rl" data-aos="fade-left">
+            <div class="content pt-4 pt-lg-0">
+              <h3>Our vision</h3>
+              <p class="fst-italic">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                magna aliqua.
+              </p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+                <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperd</li>
+              </ul>
+              <p>
+                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
+              </p>
+            </div>
+          </div>
+        </div>
+  
+      </div>
+    </section>
+
+   
+
+
+    <!-- <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      
       <h3 class="u-text u-text-1">Our Vision<br>
       </h3>
       <p class="u-text u-text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -402,9 +464,9 @@
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
       </p>
-    </div>
-  </section>
-  <section class=" u-clearfix u-section-3" id="sec-ec75">
+    </div> -->
+  
+  <!-- <section class=" u-clearfix u-section-3" id="sec-ec75">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h3 class="u-text u-text-1">Why Us ?<br>
       </h3>
@@ -419,7 +481,7 @@
         mollit anim id est laborum.
       </p>
     </div>
-  </section>
+  </section> -->
 
   <!--           *******************Our footer *********************** -->
  
