--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/random_bg_4.jpg" class="d-block w-100" alt="...">
+            <img src="./images/dataScience_homepage_1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Data Science</h5>
               <p>Some representative placeholder content for the first slide.</p>
@@ -336,7 +336,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/random_bg_3.jpg" class="d-block w-100" alt="...">
+            <img src="./images/businessintelligence_homepage_1.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Business Intelligence</h5>
               <p>Some representative placeholder content for the second slide.</p>
